# Yuki-Assistant

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  prompt.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  debugger.md  doc-writer.md  refactorer.md  security-auditor.md  test-writer.md
.claude/commands/: deploy.md  fix-issue.md  pr-review.md
.claude/hooks/: lint-on-save.sh  pre-commit.sh
.claude/rules/: api.md  database.md  frontend.md
.claude/skills/frontend-design/: SKILL.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250401_01_initial.py
backend/app/: __init__.py  config.py  config_store.py  database.py  main.py  models.py  prompts.py  schemas.py  security.py
backend/app/routers/: __init__.py  auth.py  chat.py  config_route.py  conversations.py  history.py  upload.py
backend/app/services/: __init__.py  extraction.py  ollama.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatLayout.tsx  ChatMainPane.tsx  ChatWorkspace.tsx  ConversationSidebar.tsx
frontend/src/lib/: time.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  SettingsPage.tsx
frontend/src/theme/: ChatUiContext.tsx  ThemeContext.tsx
